<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/users"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/admin"
        android:title="@string/title_admin" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting"
        android:title="@string/title_settings" />

</menu>