<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/home_bg">

        <ImageView
            android:id="@+id/iv_filter"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/filter"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:visibility="gone"/>

        <com.helper.Helper2Go.custom.CustomTextViewBold
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_centerInParent="true" />
        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/bell"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:visibility="gone"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_260sdp"
                android:nestedScrollingEnabled="true"/>

            <LinearLayout
                android:layout_below="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    >

                    <LinearLayout
                        android:id="@+id/layoutDots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:orientation="horizontal"/>

                    <com.helper.Helper2Go.custom.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/helper_to_go"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                    <com.helper.Helper2Go.custom.CustomTextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/the_first_version_of"
                        android:textColor="@color/another_grey"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="visible"
                        android:layout_marginTop="@dimen/_15sdp"/>

                    <com.helper.Helper2Go.custom.CustomTextViewRegular
                        android:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_will_add"
                        android:textColor="@color/another_grey"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginTop="@dimen/_15sdp"/>


                    <com.helper.Helper2Go.custom.CustomButtonTextRegular
                        android:id="@+id/btn_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/white"
                        android:background="@drawable/yellow_button_with_radius"
                        android:text="@string/send_feedback"
                        android:textAllCaps="false"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:visibility="visible"
                        android:layout_marginBottom="@dimen/_10sdp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
