<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="299dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/card_background_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"
            android:text="@string/send_feedbackk"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <View
            android:id="@+id/viewwww"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/card_yellow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel"/>

        <ImageView
            android:id="@+id/ivCross"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:src="@drawable/cross"
            android:tint="@color/black"
            android:layout_marginTop="1sp"
            android:layout_marginRight="@dimen/_1sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <com.helper.Helper2Go.custom.CustomEditTextRegular
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/enter_message"
            android:background="@drawable/grey_button_with_radius"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <com.helper.Helper2Go.custom.CustomTextViewRegular
            android:id="@+id/tvSubmit"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            android:text="@string/send"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/yellow_button_with_radius"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>