<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <TextView
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_yellow"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_crosee"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_close_white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rel_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:background="@drawable/rounded_et_with_shadow"
            android:padding="@dimen/_10sdp">


            <ImageView
                android:id="@+id/img_new_pass"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_new_pass"
                android:background="@null"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_eye"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/eye"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:tint="@color/dark_grey"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_new_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:background="@drawable/rounded_et_with_shadow"
            android:padding="@dimen/_10sdp">


            <ImageView

                android:id="@+id/img_new_confirm_pass"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/edt_new_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_new_confirm_pass"
                android:background="@null"
                android:hint="@string/new_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_confirm_eye"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/eye"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:tint="@color/dark_grey"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>



    <TextView
        android:background="@drawable/app_button_bg"
        android:id="@+id/button_submit"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>
